# vid-downloader-tg

./: Cargo.toml  flake.nix  rustfmt.toml
src/: main.rs
src/downloader/: downloader.rs  downloader_error.rs  mod.rs
src/downloader/playlist/: master_playlist.rs  media_playlist.rs  mod.rs  variant_playlist.rs
