[package]
name = "vid-downloader-tg"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.41.1", features = ["full", "rt-multi-thread", "macros"] }
anyhow = "1.0.94"
futures = "0.3.31"
headless_chrome = "1.0.15"
regex = "1.11.1"
reqwest = "0.11.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ctrlc = "3.4.7"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
